--- a/client/src/fonts.css
+++ b/client/src/fonts.css
@@ -1,1 +1,39 @@
-@font-face {\n  font-family: 'Poppins';\n  font-style: normal;\n  font-weight: 400;\n  font-display: swap;\n  src: url('./assets/fonts/poppins-latin-400-normal.woff2') format('woff2');\n}\n@font-face {\n  font-family: 'Poppins';\n  font-style: normal;\n  font-weight: 600;\n  font-display: swap;\n  src: url('./assets/fonts/poppins-latin-600-normal.woff2') format('woff2');\n}\n@font-face {\n  font-family: 'Playfair Display';\n  font-style: normal;\n  font-weight: 700;\n  font-display: swap;\n  src: url('./assets/fonts/playfair-display-latin-700-normal.woff2') format('woff2');\n}\n@font-face {\n  font-family: 'Vazirmatn';\n  font-style: normal;\n  font-weight: 400;\n  font-display: swap;\n  src: url('./assets/fonts/vazirmatn-arabic-400-normal.woff2') format('woff2');\n}\n@font-face {\n  font-family: 'Vazirmatn';\n  font-style: normal;\n  font-weight: 700;\n  font-display: swap;\n  src: url('./assets/fonts/vazirmatn-arabic-700-normal.woff2') format('woff2');\n}\n
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/poppins-latin-400-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("./assets/fonts/poppins-latin-600-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("./assets/fonts/playfair-display-latin-700-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/vazirmatn-arabic-400-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Vazirmatn";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("./assets/fonts/vazirmatn-arabic-700-normal.woff2") format("woff2");
+}
