--- a/client/src/fonts.css
+++ b/client/src/fonts.css
@@ -16,10 +16,10 @@
 
 @font-face {
   font-family: "Playfair Display";
-  font-style: normal;
+  font-style: bold;
   font-weight: 700;
   font-display: swap;
-  src: url("./assets/fonts/playfair-display-latin-700-normal.woff2") format("woff2");
+  src: url("./assets/fonts/casanova.woff2") format("woff2");
 }
 
 @font-face {
