--- a/client/src/fonts.css
+++ b/client/src/fonts.css
@@ -2,7 +2,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   src: url("./assets/fonts/poppins-latin-400-normal.woff2") format("woff2");
 }
 
@@ -10,7 +10,7 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
+  font-display: optional;
   src: url("./assets/fonts/poppins-latin-600-normal.woff2") format("woff2");
 }
 
@@ -18,7 +18,7 @@
   font-family: "Playfair Display";
   font-style: bold;
   font-weight: 700;
-  font-display: swap;
+  font-display: optional;
   src: url("./assets/fonts/casanova.woff2") format("woff2");
 }
 
@@ -26,7 +26,7 @@
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   src: url("./assets/fonts/vazirmatn-arabic-400-normal.woff2") format("woff2");
 }
 
@@ -34,6 +34,6 @@
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
+  font-display: optional;
   src: url("./assets/fonts/vazirmatn-arabic-700-normal.woff2") format("woff2");
 }
