--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 @theme inline {
   --font-sans:
     "Poppins", "Vazirmatn", "Noto Sans Arabic", "Noto Sans", sans-serif;
-  --font-serif: "Playfair Display", serif;
+  --font-serif: "Georgia", "Times New Roman", serif;
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -175,6 +175,10 @@ html[dir="rtl"] {
 }
 
 @layer components {
+  .site-footer {
+    min-height: 280px;
+  }
+
   .container {
     width: 100%;
     margin-left: auto;
