--- a/client/src/fonts.css
+++ b/client/src/fonts.css
@@ -18,7 +18,7 @@
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 400;
-  font-display: optional;
+  font-display: swap;
   src: url("./assets/fonts/vazirmatn-arabic-400-normal.woff2") format("woff2");
 }
 
@@ -26,6 +26,6 @@
   font-family: "Vazirmatn";
   font-style: normal;
   font-weight: 700;
-  font-display: optional;
+  font-display: swap;
   src: url("./assets/fonts/vazirmatn-arabic-700-normal.woff2") format("woff2");
 }
