--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 @theme inline {
   --font-sans:
     "Poppins", "Vazirmatn", "Noto Sans Arabic", "Noto Sans", sans-serif;
-  --font-serif: "Georgia", "Times New Roman", serif;
+  --font-serif: "Playfair Display", "Georgia", "Times New Roman", serif;
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
